syntax = "proto3";

package pb;

option go_package = "github.com/quocdaitrn/cp-user/proto/pb";

message GetUserByIDRequest {
  int32 id = 1;
}

message GetUsersByIDsRequest {
  repeated int32 ids = 1;
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
}

message NewUserIDResp {
  int32 id = 1;
}

message PublicUserInfo {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
}

message PublicUserInfoResponse {
  PublicUserInfo user = 1;
}

message PublicUsersInfoResponse {
  repeated PublicUserInfo users = 1;
}

service UserService {
  rpc GetUserByID(GetUserByIDRequest) returns (PublicUserInfoResponse);
  rpc GetUsersByIDs(GetUsersByIDsRequest) returns (PublicUsersInfoResponse);
  rpc CreateUser(CreateUserRequest) returns (NewUserIDResp);
}